<resources>
    <string name="app_name">195A-E-Senior-Project</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string-array name="role">
        <item>Advisor</item>
        <item>Faculty</item>
        <item>Student</item>
    </string-array>
    <string-array name="school">
        <item>San Jose State University</item>
    </string-array>
    <string name="role_text">Choose a role...</string>
    <string name="Cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="button">Button</string>
    <string name="registration">Registration</string>
    <string name="Undefined">TextView</string>
    <string name="collegeSearch">Search for your College</string>
    <string name="select_your_college" />
    <string name="submit">Submit</string>
    <string name="advising_hub">Advising Hub</string>
    <string name="community">Community</string>
    <string-array name="department">
        <item>Computer Engineering</item>
        <item>Computer Science</item>
    </string-array>
    <string-array name="CMPE">
        <item>Computer Engineering</item>
        <item>Software Engineering</item>
    </string-array>
    <string-array name="program">
        <item>UnderGraduate</item>
        <item>Graduate</item>
    </string-array>
    <string name="make_appointment">Make Appointment</string>
    <string name="set_date">Set Date</string>
    <string name="set_schedule">Set Schedule</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="set_time">Set Time</string>
    <string name="current_schedule">Current Schedule</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="appointments">Appointments</string>
    <string name="forum">Forum</string>
    <string name="view_appointments">View Appointments</string>
    <string name="view_notifications">View Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_blocks">Open Blocks</string>
    >>>>>>> please work
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="usersname">usersName</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="terms_conditions_fragment"><![CDATA[Terms & Conditions Fragment]]></string>
    <string name="terms_condtions"><![CDATA[Terms & Condtions]]></string>
    <string name="forum">Forum</string>
    <string name="view_appointments">View Appointments</string>
    <string name="view_notifications">View Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_blocks">Open Blocks</string>
    >>>>>>> please work
>>>>>>> maybe complete
</resources>
