<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetScheduleActivity">

    <Button
        android:id="@+id/setTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/set_time"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setSchedule"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="setSchedule"
        android:text="@string/set_schedule"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setTime" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkboxClicked"
                android:text="@string/monday" />

            <CheckBox
                android:id="@+id/tuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkboxClicked"
                android:text="@string/tuesday" />

            <CheckBox
                android:id="@+id/wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkboxClicked"
                android:text="@string/wednesday" />

            <CheckBox
                android:id="@+id/thursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkboxClicked"
                android:text="@string/thursday" />

            <CheckBox
                android:id="@+id/friday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkboxClicked"
                android:text="@string/friday" />

            <TextView
                android:id="@+id/selectedTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>