<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#93DCFF"
    tools:context=".DashboardActivity">

    <Button
        android:id="@+id/signOut"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonstyle"
        android:backgroundTint="#99B1BE"
        android:onClick="signOut"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAppointments" />

    <Button
        android:id="@+id/registerDepartment"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonstyle"
        android:backgroundTint="#99B1BE"
        android:onClick="registerDepartment"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:text="@string/Undefined"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/makeAppointment"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/buttonstyle"
        android:backgroundTint="#99B1BE"
        android:onClick="makeAppointment"
        android:text="@string/make_appointment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerDepartment" />

    <Button
        android:id="@+id/viewAppointments"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/buttonstyle"
        android:backgroundTint="#99B1BE"
        android:onClick="viewAppointments"
        android:text="View Appointments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeAppointment" />
</androidx.constraintlayout.widget.ConstraintLayout>